--- a/web/src/pages/user/register.css
+++ b/web/src/pages/user/register.css
@@ -1,9 +1,9 @@
-.login-container {
+.register-container {
     max-width: 400px;
-    margin: 100px auto;
+    margin: 50px auto;
     padding: 20px;
     height: auto;
-    border-radius: 8px; 
+    border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
@@ -23,7 +23,7 @@
     border-color: #dc3545 !important;
   }
   
-  .btn-login {
+  .btn-register {
     display: block;
     width: 100%;
     padding: 10px;
@@ -34,14 +34,14 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    box-shadow: inset 0 0 0 0 #178a9e;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     transition: ease-out 0.4s;
   }
   
-  .btn-login:hover {
+  .btn-register:hover {
     box-shadow: inset 400px 0 0 0 #2566af;
     font-weight: bold;
     color:#fff
   }
   
+ 
