--- a/web/src/components/routines/routines-list-home/routines-list-home.css
+++ b/web/src/components/routines/routines-list-home/routines-list-home.css
@@ -7,7 +7,8 @@
     width: 100px; 
     height: auto; 
     margin-right: 10px;
-    float: left
+    margin-top: 10px;
+    float: left;
   }
   
   .title-container-routine {
