--- a/web/src/components/routines/routines-list/routines-list.css
+++ b/web/src/components/routines/routines-list/routines-list.css
@@ -66,3 +66,101 @@
   }
 }
 
+.wrapper {
+  --font-color-dark: #323232;
+  --font-color-light: #FFF;
+  --bg-color: #fff;
+  --main-color: #0578c5;
+  position: relative;
+  width: 300px;
+  height: 36px;
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
+  border-radius: 34px;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 4px 4px var(--main-color);
+  align-items: center;
+  margin-left: 20px;
+}
+
+.option {
+  width: calc(100% / 3);
+  height: 28px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  margin-right: 4px; 
+}
+
+
+.input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  appearance: none;
+  cursor: pointer;
+
+}
+
+.btn-routines-filter {
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-color);
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.span {
+
+  color: var(--font-color-dark);
+}
+
+.input:checked + .btn-routines-filter {
+  background-color: var(--main-color);
+}
+
+.input:checked + .btn-routines-filter .span {
+  color: var(--font-color-light);
+}
+
+/*FILTRO TIPOS DE RUTINA */
+
+.radio-inputs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 350px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-right: 20px;
+}
+.radio-inputs > * {
+  margin: 6px;
+}
+ 
+.radio-icon img {
+  width: 2rem;
+  height: 2rem;
+  fill: #494949;
+}
+
+.radio-label {
+  color: #707070;
+  transition: 0.375s ease;
+  text-align: center;
+  font-size: 13px;
+}
+
+.filter-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
