--- a/web/src/pages/routines/routinesList.css
+++ b/web/src/pages/routines/routinesList.css
@@ -4,13 +4,14 @@
     font-size: 56px; 
     font-weight: bold; 
     color: #333;
-    margin-top: 30px;
-    
+    margin-top: 30px;    
   }
 
 
 .routines-container {
   padding: 100px;
+  min-height: 50vh;
+
 }
 
 
