--- a/web/src/pages/user/register.css
+++ b/web/src/pages/user/register.css
@@ -1,3 +1,30 @@
+.super-container-user {
+  position: relative; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh; 
+  padding: 20px; 
+  box-sizing: border-box;
+  overflow: hidden; 
+}
+
+.super-container-user::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-image: url('https://res.cloudinary.com/dznumjlzc/image/upload/v1715967073/gymcode/background/4_rt22m9.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  opacity: 0.5;
+  z-index: -1;
+}
+
+
 .register-container {
     max-width: 400px;
     margin: 50px auto;
@@ -5,6 +32,9 @@
     height: auto;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background: #fff; 
+    z-index: 1; 
+
   }
   
   .form-label {
