--- a/web/src/components/coaches/coaches-list/coaches-list.css
+++ b/web/src/components/coaches/coaches-list/coaches-list.css
@@ -1,28 +1,35 @@
-.coach-list-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-  }
+.coaches-list-container {
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 1200px;
+
+}
   
-  .coach-item {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 20px;
-  }
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+}
   
-  .coach-item img {
-    width: 100%;
-    border-radius: 5px;
-    margin-bottom: 10px;
+.col {
+  flex: 1 0 30%;
+  max-width: 30%;
+  min-width: 250px;
+  margin-bottom: 20px;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .col {
+      flex: 1 0 45%;
+      max-width: 45%;
   }
-  
-  .coach-item h3 {
-    margin-top: 0;
-    margin-bottom: 10px;
+}
+
+@media (max-width: 480px) {
+  .col {
+      flex: 1 0 90%;
+      max-width: 90%;
   }
-  
-  .coach-item p {
-    margin-top: 0;
-    margin-bottom: 10px;
-  }
+}
