--- a/web/src/pages/coaches/coachesList.css
+++ b/web/src/pages/coaches/coachesList.css
@@ -1,4 +1,4 @@
-.super-container h1 {
+.super-container-coach h1 {
     text-align: center;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 56px; 
@@ -8,14 +8,14 @@
   }
 
 
-.routines-container {
+.coaches-container {
   padding: 100px;
-  min-height: 50vh;
+  min-height: 70vh;
 
 }
 
 
-.container-super-routine::before {
+.container-super-coach::before {
   content: "";
   position: absolute;
   bottom: 0;
@@ -28,3 +28,13 @@
   z-index: -1; 
 }
 
+.routine-detail-container {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: rgba(249, 249, 249, 0.8); 
+  border-color: #0578c5;
+  border-width: 5px;
+  width: 750px;
+  height: auto;
+  z-index: 1; 
+}
