--- a/web/src/pages/info/aboutus.css
+++ b/web/src/pages/info/aboutus.css
@@ -1,6 +1,18 @@
-.aboutustitle {
-    text-shadow: 0.02em 0 0 rgba(0, 68, 255, 0.26);
+.aboutus-title {
     letter-spacing: 2px;
     text-align: center;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 56px; 
+    font-weight: bold; 
+    color: #333;
+    margin-top: 30px;
   }
   
+.aboutus-container h2 {
+  text-align: center;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 46px; 
+    font-weight: bold; 
+    color: #333;
+    margin-top: 30px;
+}
