--- a/web/src/components/routines/routines-list/routines-list.css
+++ b/web/src/components/routines/routines-list/routines-list.css
@@ -164,3 +164,26 @@
   align-items: center;
   justify-content: center;
 }
+
+/*ROUTINE CREATE BTN*/
+
+.btn-create-routine {
+  --font-color-dark: #323232;
+  --font-color-light: #FFF;
+  --bg-color: #fff;
+  --main-color: #0578c5;
+  position: relative;
+  height: 45px;
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
+  border-radius: 30px;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 4px 4px var(--main-color);
+  align-items: center;
+  margin-left: 20px;
+}
+
+.btn-create-routine:hover {
+  background-color: var(--bg-color);
+}
